tests/baselines/reference/assignmentCompatWithConstructSignatures6.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts(30,1): error TS2322: Type 'new <T>(x: T) => void' is not assignable to type 'new <T>(x: T) => T'.
  Type 'void' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts(39,1): error TS2322: Type 'new <T>(x: { foo: T; }, y: { foo: T; bar: T; }) => Base' is not assignable to type 'new <T, U>(x: { foo: T; }, y: { foo: U; bar: U; }) => Base'.
  Types of parameters 'y' and 'y' are incompatible.
    Type '{ foo: U; bar: U; }' is not assignable to type '{ foo: T; bar: T; }'.
      Types of property 'foo' are incompatible.
        Type 'U' is not assignable to type 'T'.
          'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts(42,1): error TS2322: Type 'new <T extends Base>(x: { a: T; b: T; }) => T[]' is not assignable to type 'new <T>(x: { a: T; b: T; }) => T[]'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '{ a: T; b: T; }' is not assignable to type '{ a: Base; b: Base; }'.
      Types of property 'a' are incompatible.
        Type 'T' is not assignable to type 'Base'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts (3 errors) ====
    // checking assignment compatibility relations for function types. All valid.
    
    class Base { foo: string; }
    class Derived extends Base { bar: string; }
    class Derived2 extends Derived { baz: string; }
    class OtherDerived extends Base { bing: string; }
    
    interface A {
        a: new <T>(x: T) => T[];
        a2: new <T>(x: T) => string[];
        a3: new <T>(x: T) => void;
        a4: new <T, U>(x: T, y: U) => string;
        a5: new <T, U>(x: (arg: T) => U) => T;
        a6: new <T extends Base>(x: (arg: T) => Derived) => T;
        a11: new <T>(x: { foo: T }, y: { foo: T; bar: T }) => Base;
        a15: new <T>(x: { a: T; b: T }) => T[];
        a16: new <T extends Base>(x: { a: T; b: T }) => T[];
    }
    
    var x: A;
    
    var b: new <T>(x: T) => T[]; 
    x.a = b;
    b = x.a;
    var b2: new <T>(x: T) => string[]; 
    x.a2 = b2;
    b2 = x.a2;
    var b3: new <T>(x: T) => T;
    x.a3 = b3;
    b3 = x.a3;
    ~~
!!! error TS2322: Type 'new <{|T|0|}>(x: {|T|1|}) => void' is not assignable to type 'new <{|T|2|}>(x: {|T|3|}) => {|T|4|}'.
!!! error TS2322:   Type 'void' is not assignable to type '{|T|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:11:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:11:14
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:28:14
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:28:14
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:28:14
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:28:14
    var b4: new <T, U>(x: T, y: U) => string; 
    x.a4 = b4;
    b4 = x.a4;
    var b5: new <T, U>(x: (arg: T) => U) => T; 
    x.a5 = b5;
    b5 = x.a5;
    var b11: new <T, U>(x: { foo: T }, y: { foo: U; bar: U }) => Base; 
    x.a11 = b11;
    b11 = x.a11;
    ~~~
!!! error TS2322: Type 'new <{|T|0|}>(x: { {|foo|1|}: {|T|2|}; }, y: { {|foo|3|}: {|T|4|}; {|bar|5|}: {|T|6|}; }) => {|Base|7|}' is not assignable to type 'new <{|T|8|}, {|U|9|}>(x: { {|foo|10|}: {|T|11|}; }, y: { {|foo|12|}: {|U|13|}; {|bar|14|}: {|U|15|}; }) => {|Base|16|}'.
!!! error TS2322:   Types of parameters 'y' and 'y' are incompatible.
!!! error TS2322:     Type '{ {|foo|17|}: {|U|18|}; {|bar|19|}: {|U|20|}; }' is not assignable to type '{ {|foo|21|}: {|T|22|}; {|bar|23|}: {|T|24|}; }'.
!!! error TS2322:       Types of property 'foo' are incompatible.
!!! error TS2322:         Type '{|U|25|}' is not assignable to type '{|T|26|}'.
!!! error TS2322:           '{|U|27|}' is assignable to the constraint of type '{|T|28|}', but '{|T|29|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:15:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:15:23
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:15:15
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:15:38
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:15:15
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:15:46
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:15:15
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:3:7
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:15
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:18
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:26
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:15
!!! annotated symbol 12 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:41
!!! annotated symbol 13 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:18
!!! annotated symbol 14 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:49
!!! annotated symbol 15 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:18
!!! annotated symbol 16 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:3:7
!!! annotated symbol 17 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:41
!!! annotated symbol 18 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:18
!!! annotated symbol 19 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:49
!!! annotated symbol 20 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:18
!!! annotated symbol 21 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:15:38
!!! annotated symbol 22 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:15
!!! annotated symbol 23 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:15:46
!!! annotated symbol 24 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:15
!!! annotated symbol 25 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:18
!!! annotated symbol 26 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:15
!!! annotated symbol 27 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:18
!!! annotated symbol 28 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:15
!!! annotated symbol 29 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:37:15
    var b16: new <T>(x: { a: T; b: T }) => T[]; 
    x.a16 = b16;
    b16 = x.a16;
    ~~~
!!! error TS2322: Type 'new <{|T|0|} extends {|Base|1|}>(x: { {|a|2|}: {|T|3|}; {|b|4|}: {|T|5|}; }) => {|T|6|}[]' is not assignable to type 'new <{|T|7|}>(x: { {|a|8|}: {|T|9|}; {|b|10|}: {|T|11|}; }) => {|T|12|}[]'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{ {|a|13|}: {|T|14|}; {|b|15|}: {|T|16|}; }' is not assignable to type '{ {|a|17|}: {|Base|18|}; {|b|19|}: {|Base|20|}; }'.
!!! error TS2322:       Types of property 'a' are incompatible.
!!! error TS2322:         Type '{|T|21|}' is not assignable to type '{|Base|22|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:17:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:3:7
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:17:36
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:17:15
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:17:42
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:17:15
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:17:15
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:15
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:23
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:15
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:29
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:15
!!! annotated symbol 12 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:15
!!! annotated symbol 13 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:23
!!! annotated symbol 14 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:15
!!! annotated symbol 15 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:29
!!! annotated symbol 16 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:15
!!! annotated symbol 17 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:17:36
!!! annotated symbol 18 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:3:7
!!! annotated symbol 19 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:17:42
!!! annotated symbol 20 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:3:7
!!! annotated symbol 21 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:40:15
!!! annotated symbol 22 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithConstructSignatures6.ts:3:7